# StudioLog-NDI-Midi-Bridge

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NDI_LTC_Bridge_ClaudeCode_Handoff.md  README.md  setup.ps1  vcpkg.json
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-23-setup-script.md
docs/superpowers/specs/: 2026-05-23-setup-script-design.md
installer/: StudioLogNDIMIDIBridge.iss
packaging/macos/: org.texasmusiccafe.studiolog-ndi-midi-bridge.plist
packaging/windows/: installer.nsi
resources/: app.rc  studiolog-ndi-midi-bridge.qrc
src/: main.cpp
src/app/: AppState.cpp  AppState.h  Application.cpp  Application.h  Settings.cpp  Settings.h
src/ltc/: FrameRateDetector.cpp  FrameRateDetector.h  FrameValidator.cpp  FrameValidator.h  LTCDecoder.cpp  LTCDecoder.h
src/midi/: MIDIOutput.cpp  MIDIOutput.h  MTCGenerator.cpp  MTCGenerator.h  MTCTypes.h
src/ndi/: AudioRingBuffer.h  NDIDiscovery.cpp  NDIDiscovery.h  NDIReceiver.cpp  NDIReceiver.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SetupPanel.cpp  SetupPanel.h  TrayIcon.cpp  TrayIcon.h
src/util/: HighResTimer.cpp  HighResTimer.h  Logger.cpp  Logger.h  PlatformInit.cpp  PlatformInit.h
tests/: CMakeLists.txt  test_frame_validator.cpp  test_ltc_decoder.cpp  test_mtc_timing.cpp
